18290239 elfhash improvements needed 22836257 elfhash calculation changes need to be reverted

--- a/src/pkg/Makefile
+++ b/src/pkg/Makefile
@@ -83,6 +83,7 @@ PKGCMDENV         = \
 	PATH=$(PKGROOT)/usr/bin:/usr/sbin:/usr/bin
 PKG               = $(PKGCMDENV) pkg
 PKGDEPEND         = $(PKGCMDENV) pkgdepend
+PKGDIFF           = $(PKGCMDENV) pkgdiff
 PKGFMT            = $(PKGCMDENV) pkgfmt
 PKGLINT           = $(PKGCMDENV) pkglint
 PKGMOGRIFY        = $(PKGCMDENV) pkgmogrify
@@ -189,7 +190,7 @@ $(PDIR)/%.pub: $(PDIR)/.resolved $(PKGREPOTGT)
 # Compare the proto area with the package manifests; if they've got different
 # filesets, complain
 check: $(PDIR)/protomanifest $(PDIR)/pkgmanifest
-	pkgdiff $(PDIR)/protomanifest $(PDIR)/pkgmanifest
+	$(PKGDIFF) $(PDIR)/protomanifest $(PDIR)/pkgmanifest
 
 # We either lint against a reference repository, provided in
 # $(PKGLINT_REF_REPO) or just with the repository we built.
